# noem

./: Cargo.toml
.github/workflows/: release.yml  test.yml
src/: lib.rs  manager.rs  unimail.rs
src/adapter/: mod.rs
src/adapter/chain/: builder.rs  mod.rs
src/adapter/unified/: mod.rs
src/adapter/unimail/: multipart.rs
src/fetcher/: mod.rs
src/fetcher/strategies/: mod.rs
src/fetcher/strategies/liu/: error.rs  mod.rs  parameters.rs
src/resender/: mod.rs
src/resender/strategies/endpoint/: error.rs  mod.rs  parameters.rs
